# python-krex-api

./: .gitignore  AGENTS.md  API_COVERAGE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  codes.md  endpoints.md  error-codes.md  pyproject.toml
examples/: streamlit_debug_ui.py
kex_openapi/: __init__.py  _convert.py  _http.py  client.py  codes.py  exceptions.py  models.py
src/krex/: __init__.py  _convert.py  _env.py  _http.py  catalog.py  client.py  debug.py  exceptions.py  models.py
tests/: __init__.py  runners.py  test_catalog.py  test_client.py  test_codes.py  test_convert.py  test_debug.py  test_generated_fixtures.py  test_http.py  test_live_ex.py  test_models.py  utils.py
tests/fixtures/restarea-weather/: weather-normal.json
